--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -48,5 +48,6 @@ security:
         - { path: ^/profile, roles: ROLE_USER }
         - { path: ^/userPartenaires, roles: ROLE_ADMIN }
         - { path: ^/login, roles: ROLE_BLOQUE }
+        - { path: ^/compte, roles: ROLE_CAISSIER }
         - { path: ^/api/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/api,       roles: IS_AUTHENTICATED_FULLY }
