--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "symfony/framework-bundle": "4.3.*",
         "symfony/maker-bundle": "^1.12",
         "symfony/serializer": "4.3.*",
+        "symfony/validator": "4.3.*",
         "symfony/yaml": "4.3.*",
         "vich/uploader-bundle": "^1.10"
     },
